# platformer

./: Cargo.toml  LICENSE  README.md  build.rs
.circleci/: config.yml
.github/workflows/: build_test.yml  ci.yml  security.yml
assets/textures/: black_square.ron  skeleton_spritesheet.ron
config/: bindings.ron  display.ron
src/: assets.rs  components.rs  consts.rs  gamestate.rs  lib.rs  main.rs  systems.rs
