[package]
name = "platformer"
version = "0.0.1"
authors = ["Nick Spain <nicholas.spain96@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.14.0"

[target.'cfg(feature = "metal")'.dependencies]
objc = "=0.2.6"

[dev-dependencies]
amethyst_test = "*"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

# [[bin]]
# name = "platformer"